add global tree state

--- a/client/css/overall-structure.less
+++ b/client/css/overall-structure.less
@@ -139,9 +139,9 @@ body {
         //right: 0px;
         bottom: 5%;
         z-index: 102;
-        #btn-toggle {
+        #supertree-view-toggle {
           position: absolute;
-          height: 60px;
+          height: 35px;
           width: 26px;
           left: -25px;
           border-radius: 4px 0 0;
@@ -150,10 +150,22 @@ body {
             margin-left: -6px;
           }
         }
+        #btn-toggle {
+          position: absolute;
+          top: 34px;
+          height: 35px;
+          width: 26px;
+          left: -25px;
+          border-radius: 0 0 0;
+          z-index: 1;
+          span {
+            margin-left: -6px;
+          }
+        }
         #btn-pin {
           position: absolute;
           height: 30px;
-          top: 59px;
+          top: 68px;
           left: -25px;
           width: 26px;
           border-radius: 0 0 0 4px;
@@ -188,10 +200,10 @@ body {
             }
           }
         }
-        #distribution-content{
+        #distribution-content {
           position: relative;
           width: 240px;
-          .distribution-level{
+          .distribution-level {
             height: 80px;
             background-color: #eee;
             margin-top: 3px;
