修改barcode视图中的toolbar的控制 在删除barcode.collection.js中的1995行self.trigger_null_color_encoding()方法

--- a/client/css/barcode-main.less
+++ b/client/css/barcode-main.less
@@ -38,7 +38,7 @@
 .barcode-node.sibling-highlight[class~=unhighlight] {
   opacity: 0.4;
 }
-.barcode-node[class~=sort-hovering-highlight], .padding-covered-rect[class~=sort-hovering-highlight] {
+.barcode-node[class~=sort-hovering-highlight] {
   //fill: #1F77B4;
   stroke: #1f77b4 !important;
   stroke-width: 2px;
