--- a/client/css/barcode-supertree.less
+++ b/client/css/barcode-supertree.less
@@ -28,3 +28,8 @@
   stroke: #eee;
   stroke-width: 2px;
 }
+.padding-covered-rect[class~=sort-hovering-highlight] {
+  //fill: #1F77B4;
+  stroke: #808080 !important;
+  stroke-width: 2px;
+}
