--- a/client/css/color.less
+++ b/client/css/color.less
@@ -1,2 +1,2 @@
 @category-bg-color: white;
-@category-bg-hovering-color: #1f77b4;
+@category-bg-hovering-color: #808080;// 在barcode-supertree.less的第22行和23行
