--- a/client/css/top-toolbar.less
+++ b/client/css/top-toolbar.less
@@ -4,6 +4,9 @@
   .btn-group {
     margin-right: 35px;
   }
+  #subtree-collapse-operation {
+    margin-right: 15px;
+  }
   #selection-operation-span {
     height: 100%;
   }
@@ -21,15 +24,29 @@
   .config-button {
     padding: 5px 7px 5px 7px;
   }
-  .fa{
+  .fa {
     font-size: 17px;
   }
-  .operation-label{
+  .operation-label {
     display: inline-block;
     vertical-align: middle;
   }
-  .config-div{
+  .config-div {
     display: inline-block;
     vertical-align: middle;
+  }
+  #structure-comparison{
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+  }
+  #similarity-range{
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+  }
+  .slider-div {
+    margin: 10px 30px 20px 30px;
+  }
+  .slider-label{
+    margin-left: 20px;
   }
 }
