--- a/client/css/barcode-view.less
+++ b/client/css/barcode-view.less
@@ -5,21 +5,24 @@
       stroke-width: 0.25px;
     }
     rect.bg-odd {
-      fill: #fff;//#f9f9f9
+      fill: #fff; //#f9f9f9
     }
     rect.bg-even {
       fill: #fff;
     }
-    .bg[class~=hovering-highlight]{
+    .bg[class~=hovering-highlight] {
       //stroke: #1F77B4;
       //stroke-width: 2;
       //stroke-alignment: outside;
       fill: #efefef;
     }
-    .bg[class~=compare-based-selection]{
+    .bg[class~=compare-based-selection] {
       //stroke: #1F77B4;
       //stroke-width: 2;
       //stroke-alignment: outside;
+      fill: #efefef;
+    }
+    .bg[class~=barcode-tree-filter] {
       fill: #efefef;
     }
   }
