--- a/client/css/overall-structure.less
+++ b/client/css/overall-structure.less
@@ -142,13 +142,14 @@ body {
       }
       #barcode-config {
         position: fixed;
-        top: ~"calc(15% + 120px)";
+        top: ~"calc(15% + 150px)";
         height: auto;
-        right: -270px;
+        right: -260px;
+        width: 260px;
         //right: 0px;
         bottom: 5%;
         z-index: 102;
-        #btn-toggle {
+        #distribution-view-toggle {
           position: absolute;
           top: 0px;
           height: 45px;
@@ -178,7 +179,7 @@ body {
           border: solid 1px #ccc;
           border-radius: 0 0 0 4px;
           height: 100%;
-          min-width: 270px;
+          min-width: 260px;
           overflow-x: hidden;
           overflow-y: auto;
           padding: 15px;
