finish the supertree view

--- a/client/css/barcode-supertree.less
+++ b/client/css/barcode-supertree.less
@@ -1,35 +1,54 @@
 .barcode-g-icon[class~=mouseover-highlight] {
   fill: black !important;
 }
+
 .barcode-g-icon[class~=icon-selection-highlight] {
   fill: black;
 }
-.barcode-g-icon{
+
+.barcode-g-icon {
   fill: white;
 }
+
 .barcode-icon-bg {
   fill: #808080
 }
+
+.supertree-icicle-node {
+  fill: black;
+  stroke: white;
+  stroke-width: 3px;
+}
+
 .container-bg {
   fill: white;
 }
-.category-g > .category-bg{
-  fill:white;
-  stroke-width:1;
-  stroke:#dddddd;
+
+.category-g > .category-bg {
+  fill: white;
+  stroke-width: 1;
+  stroke: #dddddd;
 }
-.category-bg[class~=mouseover-highlight]{
-  fill:@category-bg-hovering-color;
+
+.category-bg[class~=mouseover-highlight] {
+  fill: @category-bg-hovering-color;
 }
-.category-bg[class~=select-highlight]{
-  fill:@category-bg-hovering-color;
+
+.category-bg[class~=select-highlight] {
+  fill: @category-bg-hovering-color;
 }
-.container-bg{
+
+.container-bg {
   stroke: #eee;
   stroke-width: 2px;
 }
+
 .padding-covered-rect[class~=sort-hovering-highlight] {
   //fill: #1F77B4;
   stroke: #808080 !important;
   stroke-width: 2px;
+}
+
+.category-text{
+  fill: white;
 }
