--- a/client/css/overall-structure.less
+++ b/client/css/overall-structure.less
@@ -124,7 +124,7 @@ body {
       #supertree-scroll-panel {
         position: absolute;
         overflow-x: auto;
-        overflow-y: hidden;
+        overflow-y: auto;
         top: 0%;
         left: 0%;
         right: 0%;
