修复了reordering的函数 允许用户从下面的comparison 视图中选择感兴趣的barcodeTree， 在上方高亮出感兴趣的子树的分布情况 修复了在attribute encode的barcodetree压缩到一个屏幕的空间范围内的问题

--- a/client/css/barcodetree-view.less
+++ b/client/css/barcodetree-view.less
@@ -12,6 +12,9 @@
       stroke: #ddd;
       stroke-width: 0.25px;
     }
+    rect.barcode-bg{
+      fill: #fff; //#f9f9f9
+    }
     rect.bg-odd {
       fill: #fff; //#f9f9f9
     }
@@ -64,8 +67,8 @@
     }
 
     .barcode-node.template {
-      opacity: 0.4;
-      stroke: black !important;
+      //opacity: 0.4;
+      //stroke: black !important;
       stroke-width: 0.05rem !important;
     }
 
@@ -84,13 +87,13 @@
     .barcode-node.node-missed {
       fill: white !important;
       stroke: #aaa !important;
-      stroke-width: 0.05rem !important;
+      stroke-width: 0.2rem !important;
     }
 
     .barcode-node.node-missed-wide {
       fill: white !important;
       stroke: #aaa !important;
-      stroke-width: 0.1rem !important;
+      stroke-width: 0.2rem !important;
     }
 
     .barcode-node.node-missed-narrow {
