--- a/client/css/histogram.less
+++ b/client/css/histogram.less
@@ -29,6 +29,9 @@
       shape-rendering: crispEdges;
     }
   }
+  .lasso-selected {
+    fill: @lasso-selected-color;
+  }
   #histogram-control-panel {
     position: absolute;
     width: 2.5rem;
