--- a/client/css/overall-variables.less
+++ b/client/css/overall-variables.less
@@ -49,7 +49,7 @@
 
 //  barcode-main.less && barcode-supertree.less
 @barcode-node-color: #808080;
-
+@lasso-selected-color: steelblue;
 // 单个barcodeTree视图上的高度
 @barcode-single-view_top: 2.5rem;
 @barcode-mode-config-view_top: 6rem;
