--- a/client/css/top-toolbar.less
+++ b/client/css/top-toolbar.less
@@ -123,7 +123,7 @@
       font-size: 1.2rem;
     }
     #options-attribute, #options-structure, #options-similarity {
-      margin-top: 0px;
+      margin-top: 0.3rem;
     }
     #aligned-level-menu {
       text-align: left;
