--- a/client/css/barcode-node-config.less
+++ b/client/css/barcode-node-config.less
@@ -29,22 +29,33 @@
   }
   .panel-content {
     width: 100%;
-    padding-left: 10%;
+    padding-left: 8%;
     padding-right: 5%;
     .slider-container {
       width: 100%;
-      padding-bottom: 2.5rem;
+      //padding-bottom: 2.5rem;
+      display: table;
+      width: 100%;
+      padding-bottom: 40px;
       .ui-slider-handle {
         text-align: center;
-        padding-top: 0.1rem;
+        //padding-top: 0.08rem;
       }
       .slider-div {
-        padding-left: 0;
-        padding-right: 0;
+        display: table-cell;
+        vertical-align: middle;
+        width: 60%;
+        margin-right: 0.5rem;
+        //padding-left: 0;
+        //padding-right: 0;
+        //margin-top: 0.3rem;
       }
       .slider-label {
-        float: right;
-        font-size: @config-font-size;
+        display: table-cell;
+        vertical-align: middle;
+        //float: right;
+        //font-size: @config-font-size;
+        //padding-left: 1rem;
       }
     }
     .range-label {
