--- a/client/css/barcode-node-config.less
+++ b/client/css/barcode-node-config.less
@@ -36,7 +36,7 @@
       //padding-bottom: 2.5rem;
       display: table;
       width: 100%;
-      padding-bottom: 40px;
+      padding-bottom: 1.2rem;
       .ui-slider-handle {
         text-align: center;
         //padding-top: 0.08rem;
