修改在global模式下的对齐操作

--- a/client/css/barcodetree-view.less
+++ b/client/css/barcodetree-view.less
@@ -75,25 +75,28 @@
     .barcode-node.node-missed_max-stroke {
       fill: white !important;
       stroke: #aaa !important;
-      stroke-width: 5px !important;
+      stroke-width: 2px !important;
+      opacity: 0.4;
     }
 
     .barcode-node.node-missed_min-stroke {
       fill: white !important;
       stroke: #aaa !important;
-      stroke-width: 1px !important;
+      stroke-width: 0.5px !important;
+      opacity: 0.4;
     }
 
     .barcode-node.node-missed {
       fill: white !important;
       stroke: #aaa !important;
-      stroke-width: 0.15rem !important;
+      stroke-width: 0.1rem !important;
+      opacity: 0.4;
     }
 
     .barcode-node.node-missed-wide {
       fill: white !important;
       stroke: #aaa !important;
-      stroke-width: 0.15rem !important;
+      stroke-width: 0.1rem !important;
     }
 
     .barcode-node.node-missed-narrow {
