--- a/client/css/histogram.less
+++ b/client/css/histogram.less
@@ -30,7 +30,7 @@
     }
   }
   .lasso-selected {
-    fill: @lasso-selected-color;
+    fill: @lasso-selected-color !important;
   }
   #histogram-control-panel {
     position: absolute;
