--- a/client/css/overall-structure.less
+++ b/client/css/overall-structure.less
@@ -34,7 +34,7 @@ body {
     .logo {
       position: absolute;
       margin: 5rem auto;
-      font-size:3.5rem;
+      font-size: 3.5rem;
       text-align: center;
       left: 45%;
       top: 40%;
@@ -185,6 +185,7 @@ body {
           font-size: 1rem;
           border-radius: 0 0 0.4rem 0.4rem;
           z-index: 1;
+          opacity: 0.3;
           span {
             margin-top: -0.3rem;
           }
@@ -217,8 +218,9 @@ body {
           left: -2.1rem;
           border-radius: 0.4rem 0 0 0.4rem;
           z-index: 1;
-          visibility: hidden;
+          //visibility: hidden;
           padding: 0.3rem 1rem;
+          opacity: 0.3;
           span {
             margin-left: -0.6rem;
           }
