cancel the barcodeTree sequence reordering

--- a/client/css/tooltip.less
+++ b/client/css/tooltip.less
@@ -222,7 +222,8 @@ div.tooltip {
 
 .tooltip-inner{
   padding: 0.5rem;
-  width: 10rem;
+  _width: 12rem;
+  white-space:nowrap;
   text-align: left;
   background-color: rgba(0,0,0,0.80);;
 }
