set the background of BarcodeTree as transparent remove the transition of adding BarcodeTree

--- a/client/css/barcodetree-view.less
+++ b/client/css/barcodetree-view.less
@@ -14,6 +14,7 @@
     }
     rect.barcode-bg {
       fill: #fff; //#f9f9f9
+      opacity: 0;
     }
     rect.bg-odd {
       fill: #fff; //#f9f9f9
