hovering highlight the bg group the highlight function in barcodetree single view

--- a/client/css/barcodetree-view.less
+++ b/client/css/barcodetree-view.less
@@ -26,6 +26,7 @@
       //stroke: #1F77B4;
       //stroke-width: 2;
       //stroke-alignment: outside;
+      opacity: 1 !important;
       fill: #efefef;
     }
     .bg[class~=set-operation] {
