允许用户将切断的barcodeTree之间使用直线进行连接， 并且barcodeTree的不同部分可以进行重新排序， 通过不同部分之间连接的趋势发现barcodeTree的趋势

--- a/client/css/barcodetree-view.less
+++ b/client/css/barcodetree-view.less
@@ -228,5 +228,10 @@
     .opacity-bg {
       opacity: 0;
     }
+
+    .barcode-link {
+      stroke-width: 2px;
+      stroke: gray;
+    }
   }
 }
