运行对于barcodeTree的某一段进行排序

--- a/client/css/barcodetree-view.less
+++ b/client/css/barcodetree-view.less
@@ -13,8 +13,8 @@
       stroke-width: 0.25px;
     }
     rect.barcode-bg {
-      fill: #fff; //#f9f9f9
-      opacity: 0;
+      fill: #dfdfdf; //#fff
+      opacity: 1;
     }
     rect.bg-odd {
       fill: #fff; //#f9f9f9
@@ -46,6 +46,11 @@
     }
     .bg[class~=barcode-tree-filter] {
       fill: #efefef;
+    }
+    .barcodetree-link{
+      fill: none;
+      stroke: #dfdfdf;
+      shape-rendering: auto;
     }
     .barcode-node {
       fill: @barcode-node-color;
