add sorting icon to the BarcodeTree control panel

--- a/client/css/barcodetree-view.less
+++ b/client/css/barcodetree-view.less
@@ -47,7 +47,7 @@
     .bg[class~=barcode-tree-filter] {
       fill: #efefef;
     }
-    .barcodetree-link{
+    .barcodetree-link {
       fill: none;
       stroke: #dfdfdf;
       shape-rendering: auto;
@@ -237,6 +237,10 @@
     .barcode-link {
       stroke-width: 2px;
       stroke: gray;
+    }
+
+    .select-icon {
+      opacity: 0.3;
     }
   }
 }
