--- a/client/css/overall-structure.less
+++ b/client/css/overall-structure.less
@@ -176,6 +176,16 @@ body {
         left: 0%;
         background-color: white;
         border-top: #eeeeee 0.5px solid;
+        #sorting-control-view {
+          position: absolute;
+          width: 100%;
+          .sorting-icon {
+            position: absolute;
+            padding: 0.15rem 0.2rem;
+            display: inline-block;
+            vertical-align: middle;
+          }
+        }
       }
       //  barcodeview中的第三个视图, barcodetree的主视图, 进行比较,同时这个视图支持用户进行滑动
       #barcodetree-scrollpanel {
