--- a/client/css/overall-variables.less
+++ b/client/css/overall-variables.less
@@ -48,7 +48,7 @@
 @supertree-scroll-panel_top: @top-toolbar-container_height;
 
 //sorting 视图的height数值
-@sorting-panel_height: 0rem;
+@sorting-scroll-panel_height: 0rem;
 
 //  barcodetree-scrollpanel 的top的数值
 @barcodetree-scrollpanel_top: @top-toolbar-container_height;
